Corrected overlap of bottom content and footer

--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ main form {
 /* Footer Styling */
 
 .footer {
-  padding-top: 100px;
+  padding-top: 150px;
 }
 
 .container-fluid {
